# WolfPro

./: CMakeLists.txt  fetch-dependencies.bat  fetch-dependencies.sh  fetch-dependencies64.bat  fetch-dependencies64.sh
.github/workflows/: release.yml
MAIN/icons/: iconw_rocket_select.tga
MAIN/models/players/multi/: wolfanim.script
MAIN/scripts/: chars.shader
MAIN/ui_mp/: demos.menu  ingame.txt  main.menu
cmake/: FindCURL.cmake  FindOMNIBOT.cmake  WolfBuildClient.cmake  WolfBuildMod.cmake  WolfCommon.cmake  WolfSetupFeatures.cmake  WolfSources.cmake
docker/: ci-build-linux.sh
docker/dockerfiles/: rtcw-compile64
docker/dockerfiles/scripts/: entrypoint64.sh
src/: makefile
src/cgame/: cg_consolecmds.c  cg_draw.c  cg_drawtools.c  cg_edv.c  cg_ents.c  cg_event.c  cg_imgui.c  cg_local.h  cg_main.c  cg_ndp.c  cg_newDraw.c  cg_players.c  cg_predict.c  cg_public.h  cg_scoreboard.c  cg_servercmds.c  cg_snapshot.c  cg_syscalls.c  cg_view.c  cg_weapons.c
src/cimplot/: cimplot.cpp  cimplot.h  cimplot_wolfpro_safe.cpp  cimplot_wolfpro_safe.h  implot_demo_stub.cpp
src/client/: cl_cgame.c  cl_console.c  cl_curl.c  cl_input.c  cl_main.c  cl_net_chan.c  cl_parse.c  cl_profiler.c  cl_profiler.h  cl_scrn.c  cl_ui.c  client.h  keys.h
src/game/: ai_cast_characters.c  ai_cast_sight.c  bg_animation.c  bg_misc.c  bg_pmove.c  bg_public.h  g_active.c  g_client.c  g_cmds.c  g_combat.c  g_items.c  g_json.c  g_local.h  g_main.c  g_misc.c  g_missile.c  g_mover.c  g_players.c  g_props.c  g_public.h  g_rtcwbot_interface.cpp  g_script.c  g_script_actions.c  g_session.c  g_spawn.c  g_stats.c  g_svcmds.c  g_syscalls.c  g_target.c  g_team.c  g_tramcar.c  g_trigger.c  g_unlagged.c  g_utils.c  g_weapon.c  q_math.c  q_shared.c  q_shared.h  rtcwbot_interface.cpp  rtcwbot_interface.h  (+1 more)
src/game/omnibot/: BotExports.h  RTCW_Config.h  RTCW_Messages.h
src/game/omnibot/Common/: BlackBoard.h  BotBaseStates.h  BotWeaponSystem.h  Client.h  CodeAnalysis.h  CommandFunctor.h  FilterBias.h  FilterSensory.h  Functor.h  GoalManager.h  IGame.h  IGameManager.h  MapGoal.h  MemoryRecord.h  MessageFunctor.h  NameManager.h  PathPlannerBase.h  PathPlannerFloodFill.h  PathPlannerNavMesh.h  PathPlannerWaypoint.h  PropertyBinding.h  QuadTree.h  Regulator.h  ScriptGoal.h  ScriptManager.h  StateMachine.h  ThreatZone.h  TrackablePtr.h  TriggerManager.h  Utilities.h  Waypoint.h  WaypointSerializerImp.h  Weapon.h  common.h  gmAABB.h  gmBind.h  gmBot.h  gmSystemLibApp.h
src/game/util/: mds_extract.py
src/null/: null_client.c
src/qcommon/: cm_load.c  cmd.c  common.c  cvar.c  files.c  md5.c  model.c  msg.c  net_chan.c  net_ip.c  prof.c  qcommon.h  qfiles.h
src/renderer_common/: tr_font_bake.c  tr_font_bake.h
src/renderer_gl/: tr_animation.c  tr_bsp.c  tr_cmds.c  tr_image.c  tr_init.c  tr_local.h  tr_main.c  tr_model.c  tr_public.h  tr_shader.c
src/renderer_vk/: rhi.c  rhi.h  tr_animation.c  tr_backend.c  tr_blit.c  tr_bsp.c  tr_cmds.c  tr_cmesh.c  tr_image.c  tr_imgui.c  tr_init.c  tr_local.h  tr_mesh.c  tr_model.c  tr_public.h  tr_sky.c  tr_vulkan.c  tr_vulkan.h
src/server/: server.h  stats_submit_curl.c  sv_bot.c  sv_ccmds.c  sv_client.c  sv_game.c  sv_init.c  sv_main.c  sv_net_chan.c  sv_snapshot.c  sv_world.c
src/ui/: ui_gameinfo.c  ui_local.h  ui_main.c  ui_players.c  ui_shared.c  ui_shared.h  ui_syscalls.c
src/unix/: linux_common.c  linux_glimp.c  linux_local.h  linux_signals.c  sdl_glimp.c  unix_main.c  unix_shared.c
src/win32/: win_glimp.c  win_local.h  win_main.c  win_net.c  win_shared.c  win_vkimp.c  win_wndproc.c
tools/font_convert/: alignment.py  build_ttf.py  contours.py  convert.py  masks.py  metrics.py  preview.py  requirements.txt  tga_reader.py
tools/font_convert/tests/: test_alignment.py  test_build_ttf.py  test_contours.py  test_masks.py  test_metrics.py  test_tga_reader.py
wolfpro/: autoexecsv_mp_assault.cfg  autoexecsv_te_ufo.cfg
